# c_cast_and_serve

./: .gitignore  CMakeLists.txt  README.md  build.sh  cast_and_serve.cpp  cast_channel.proto
scripts/: convert_audio.sh
